// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component renders 1`] = `
@media  {
  .c-caRXJy {
    display: flex;
    flex-direction: column;
    padding-top: var(--space-4);
  }

  .c-bVBcpu {
    flex-shrink: 0;
    display: flex;
  }

  .c-ehnQBI {
    text-transform: uppercase;
    cursor: pointer;
    flex-shrink: 0;
    font-family: var(--fonts-body);
    padding: var(--space-4);
    -webkit-user-select: none;
    user-select: none;
    transition: 0.3s;
  }

  .c-eGaVeY {
    flex-grow: 1;
  }
}

@media  {
  .c-caRXJy-eOLnUW-theme-light {
    background: white;
    color: var(--colors-primary);
  }

  .c-bVBcpu-eFavRf-theme-light {
    border-bottom: 1px solid var(--colors-tonal300);
  }

  .c-ehnQBI-kLQAjc-theme-light {
    background: white;
  }

  .c-ehnQBI-kLQAjc-theme-light[data-state="active"] {
    color: var(--colors-primary);
    text-shadow: 0px 0px 1px currentColor;
    box-shadow: inset 0 -2px 0 0 currentColor;
  }

  .c-ehnQBI-kLQAjc-theme-light[data-state="inactive"] {
    color: var(--colors-tonal500);
  }

  .c-ehnQBI-kLQAjc-theme-light:not([data-disabled]):hover {
    color: var(--colors-primary);
    background: rgba(30,113,246,0.1);
  }

  .c-ehnQBI-kLQAjc-theme-light:not([data-disabled]):active {
    color: var(--colors-primary);
    background: rgba(30,113,246,0.2);
    box-shadow: none;
  }

  .c-ehnQBI-kLQAjc-theme-light[data-disabled],
  .c-ehnQBI-kLQAjc-theme-light[data-disabled]:hover {
    color: var(--colors-tonal200);
    cursor: default;
  }

  .c-eGaVeY-jWVCRL-theme-light {
    color: var(--colors-textForeground);
    font-family: var(--fonts-body);
  }
}

<div>
  <div
    class="c-caRXJy c-caRXJy-eOLnUW-theme-light"
    data-orientation="horizontal"
  >
    <div
      aria-orientation="horizontal"
      class="c-bVBcpu c-bVBcpu-eFavRf-theme-light"
      data-orientation="horizontal"
      dir="ltr"
      role="tablist"
      style="outline: none;"
      tabindex="0"
    >
      <div
        aria-controls="radix-id-0-1-content-tab1"
        aria-selected="true"
        class="c-ehnQBI c-ehnQBI-kLQAjc-theme-light"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="active"
        id="radix-id-0-1-trigger-tab1"
        role="tab"
        tabindex="-1"
      >
        Trigger 1
      </div>
      <div
        aria-controls="radix-id-0-1-content-tab2"
        aria-selected="false"
        class="c-ehnQBI c-ehnQBI-kLQAjc-theme-light"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="inactive"
        id="radix-id-0-1-trigger-tab2"
        role="tab"
        tabindex="-1"
      >
        Trigger 2
      </div>
    </div>
    <div
      aria-labelledby="radix-id-0-1-trigger-tab1"
      class="c-eGaVeY c-eGaVeY-jWVCRL-theme-light"
      data-orientation="horizontal"
      data-state="active"
      id="radix-id-0-1-content-tab1"
      role="tabpanel"
      tabindex="0"
    >
      Important content for tab 1
    </div>
    <div
      aria-labelledby="radix-id-0-1-trigger-tab2"
      class="c-eGaVeY c-eGaVeY-jWVCRL-theme-light"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-id-0-1-content-tab2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Tabs component renders mobile view 1`] = `
@media  {
  .c-caRXJy {
    display: flex;
    flex-direction: column;
    padding-top: var(--space-4);
  }

  .c-bVBcpu {
    flex-shrink: 0;
    display: flex;
  }

  .c-ehnQBI {
    text-transform: uppercase;
    cursor: pointer;
    flex-shrink: 0;
    font-family: var(--fonts-body);
    padding: var(--space-4);
    -webkit-user-select: none;
    user-select: none;
    transition: 0.3s;
  }

  .c-eGaVeY {
    flex-grow: 1;
  }

  .c-dhzjXW {
    display: flex;
  }
}

@media  {
  .c-caRXJy-eOLnUW-theme-light {
    background: white;
    color: var(--colors-primary);
  }

  .c-bVBcpu-eFavRf-theme-light {
    border-bottom: 1px solid var(--colors-tonal300);
  }

  .c-ehnQBI-kLQAjc-theme-light {
    background: white;
  }

  .c-ehnQBI-kLQAjc-theme-light[data-state="active"] {
    color: var(--colors-primary);
    text-shadow: 0px 0px 1px currentColor;
    box-shadow: inset 0 -2px 0 0 currentColor;
  }

  .c-ehnQBI-kLQAjc-theme-light[data-state="inactive"] {
    color: var(--colors-tonal500);
  }

  .c-ehnQBI-kLQAjc-theme-light:not([data-disabled]):hover {
    color: var(--colors-primary);
    background: rgba(30,113,246,0.1);
  }

  .c-ehnQBI-kLQAjc-theme-light:not([data-disabled]):active {
    color: var(--colors-primary);
    background: rgba(30,113,246,0.2);
    box-shadow: none;
  }

  .c-ehnQBI-kLQAjc-theme-light[data-disabled],
  .c-ehnQBI-kLQAjc-theme-light[data-disabled]:hover {
    color: var(--colors-tonal200);
    cursor: default;
  }

  .c-eGaVeY-jWVCRL-theme-light {
    color: var(--colors-textForeground);
    font-family: var(--fonts-body);
  }
}

@media  {
  .c-dhzjXW-icmpvrW-css {
    position: relative;
  }

  .c-bVBcpu-ifwuxZe-css {
    width: 100%;
    overflow-x: auto;
  }

  .c-bVBcpu-ifwuxZe-css::-webkit-scrollbar {
    display: none;
  }
}

<div>
  <div
    class="c-caRXJy c-caRXJy-eOLnUW-theme-light"
    data-orientation="horizontal"
  >
    <div
      class="c-dhzjXW c-dhzjXW-icmpvrW-css"
    >
      <div
        aria-orientation="horizontal"
        class="c-bVBcpu c-bVBcpu-eFavRf-theme-light c-bVBcpu-ifwuxZe-css"
        data-orientation="horizontal"
        dir="ltr"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <div
          aria-controls="radix-id-0-1-content-tab1"
          aria-selected="true"
          class="c-ehnQBI c-ehnQBI-kLQAjc-theme-light"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          id="radix-id-0-1-trigger-tab1"
          role="tab"
          tabindex="-1"
        >
          Trigger 1 which is going to be long
        </div>
        <div
          aria-controls="radix-id-0-1-content-tab2"
          aria-selected="false"
          class="c-ehnQBI c-ehnQBI-kLQAjc-theme-light"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-id-0-1-trigger-tab2"
          role="tab"
          tabindex="-1"
        >
          Trigger 2 which is going to be even longer
        </div>
      </div>
    </div>
    <div
      aria-labelledby="radix-id-0-1-trigger-tab1"
      class="c-eGaVeY c-eGaVeY-jWVCRL-theme-light"
      data-orientation="horizontal"
      data-state="active"
      id="radix-id-0-1-content-tab1"
      role="tabpanel"
      tabindex="0"
    >
      Important content for tab 1
    </div>
    <div
      aria-labelledby="radix-id-0-1-trigger-tab2"
      class="c-eGaVeY c-eGaVeY-jWVCRL-theme-light"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-id-0-1-content-tab2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;
